--- a/spring-cloud-producer/src/main/resources/application.yml
+++ b/spring-cloud-producer/src/main/resources/application.yml
@@ -1,9 +1,9 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://10.0.1.9:8761/eureka/
 server:
-  port: 9000
+  port: 8080
 spring:
   application:
     name: spring-cloud-producer
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
