--- a/spring-cloud-consumer/src/main/resources/application.yml
+++ b/spring-cloud-consumer/src/main/resources/application.yml
@@ -1,11 +1,18 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.0.1.9:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
   instance:
     preferIpAddress: true
 server:
   port: 9001
 spring:
+  main:
+    allow-circular-references: true
   application:
     name: spring-cloud-consumer
+  cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8888
+      eager: true
